--- a/genindex.html
+++ b/genindex.html
@@ -1482,6 +1482,8 @@
 </li>
       <li><a href="engine/core/chronicle.html#scripts.engine.core.chronicle.get_time_in_round">get_time_in_round() (in module scripts.engine.core.chronicle)</a>, <a href="scripts.engine.core.html#scripts.engine.core.chronicle.get_time_in_round">[1]</a>
 </li>
+      <li><a href="engine/core/chronicle.html#scripts.engine.core.chronicle.get_time_left_in_round">get_time_left_in_round() (in module scripts.engine.core.chronicle)</a>, <a href="scripts.engine.core.html#scripts.engine.core.chronicle.get_time_left_in_round">[1]</a>
+</li>
       <li><a href="engine/core/chronicle.html#scripts.engine.core.chronicle.get_time_of_last_turn">get_time_of_last_turn() (in module scripts.engine.core.chronicle)</a>, <a href="scripts.engine.core.html#scripts.engine.core.chronicle.get_time_of_last_turn">[1]</a>
 </li>
       <li><a href="engine/core/chronicle.html#scripts.engine.core.chronicle.get_turn_holder">get_turn_holder() (in module scripts.engine.core.chronicle)</a>, <a href="scripts.engine.core.html#scripts.engine.core.chronicle.get_turn_holder">[1]</a>
@@ -2932,12 +2934,8 @@
 </li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.ProjectileSpeed.SLOW">SLOW (ProjectileSpeed attribute)</a>
 </li>
-      <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.DelayedSkillData.speed">speed (DelayedSkillData attribute)</a>
-
-      <ul>
-        <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.ProjectileData.speed">(ProjectileData attribute)</a>
+      <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.ProjectileData.speed">speed (ProjectileData attribute)</a>
 </li>
-      </ul></li>
       <li><a href="engine/core/world.html#scripts.engine.core.world.spend_time">spend_time() (in module scripts.engine.core.world)</a>, <a href="scripts.engine.core.html#scripts.engine.core.world.spend_time">[1]</a>
 </li>
       <li><a href="nqp/actions/skill.html#scripts.nqp.actions.skill.Splash">Splash (class in scripts.nqp.actions.skill)</a>, <a href="scripts.nqp.actions.html#scripts.nqp.actions.skill.Splash">[1]</a>
