--- a/_modules/scripts/engine/internal/action.html
+++ b/_modules/scripts/engine/internal/action.html
@@ -706,13 +706,29 @@
 <div class="viewcode-block" id="DelayedSkill.__init__"><a class="viewcode-back" href="../../../../scripts.engine.internal.html#scripts.engine.internal.action.DelayedSkill.__init__">[docs]</a>    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">attached_entity</span><span class="p">:</span> <span class="n">EntityID</span><span class="p">):</span>
         <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="n">attached_entity</span><span class="p">)</span>
 
-        <span class="bp">self</span><span class="o">.</span><span class="n">data</span><span class="p">:</span> <span class="n">DelayedSkillData</span> <span class="o">=</span> <span class="n">DelayedSkillData</span><span class="p">()</span></div>
+        <span class="c1"># N.B. both must be set after init</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">data</span><span class="p">:</span> <span class="n">DelayedSkillData</span> <span class="o">=</span> <span class="n">DelayedSkillData</span><span class="p">()</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">remaining_duration</span> <span class="o">=</span> <span class="mi">0</span></div>
 
 <div class="viewcode-block" id="DelayedSkill.act"><a class="viewcode-back" href="../../../../scripts.engine.internal.html#scripts.engine.internal.action.DelayedSkill.act">[docs]</a>    <span class="k">def</span> <span class="nf">act</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">data</span><span class="o">.</span><span class="n">duration</span> <span class="o">&gt;</span> <span class="mi">0</span><span class="p">:</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">data</span><span class="o">.</span><span class="n">duration</span> <span class="o">-=</span> <span class="mi">1</span>
-            <span class="n">logging</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="sa">f</span><span class="s2">"</span><span class="si">{</span><span class="n">world</span><span class="o">.</span><span class="n">get_name</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">entity</span><span class="p">)</span><span class="si">}</span><span class="s2"> will trigger in </span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">data</span><span class="o">.</span><span class="n">duration</span><span class="si">}</span><span class="s2"> turns."</span><span class="p">)</span>
-            <span class="n">chronicle</span><span class="o">.</span><span class="n">end_turn</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">entity</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">data</span><span class="o">.</span><span class="n">speed</span><span class="p">)</span>
+        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">remaining_duration</span> <span class="o">==</span> <span class="bp">self</span><span class="o">.</span><span class="n">data</span><span class="o">.</span><span class="n">duration</span><span class="p">:</span>
+            <span class="c1"># get time left in round, to align first end of turn to round</span>
+            <span class="n">chronicle</span><span class="o">.</span><span class="n">end_turn</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">entity</span><span class="p">,</span> <span class="n">chronicle</span><span class="o">.</span><span class="n">get_time_left_in_round</span><span class="p">())</span>
+
+            <span class="bp">self</span><span class="o">.</span><span class="n">remaining_duration</span> <span class="o">-=</span> <span class="mi">1</span>
+            <span class="n">logging</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="sa">f</span><span class="s2">"</span><span class="si">{</span><span class="n">world</span><span class="o">.</span><span class="n">get_name</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">entity</span><span class="p">)</span><span class="si">}</span><span class="s2"> will trigger in </span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">remaining_duration</span><span class="si">}</span><span class="s2"> rounds."</span><span class="p">)</span>
+
+            <span class="k">return</span>
+
+        <span class="k">elif</span> <span class="bp">self</span><span class="o">.</span><span class="n">remaining_duration</span> <span class="o">&gt;</span> <span class="mi">0</span><span class="p">:</span>
+            <span class="c1"># with turn aligned to round now end turn with duration of round</span>
+            <span class="kn">from</span> <span class="nn">scripts.engine.internal</span> <span class="kn">import</span> <span class="n">library</span>
+
+            <span class="n">chronicle</span><span class="o">.</span><span class="n">end_turn</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">entity</span><span class="p">,</span> <span class="n">library</span><span class="o">.</span><span class="n">GAME_CONFIG</span><span class="o">.</span><span class="n">default_values</span><span class="o">.</span><span class="n">time_per_round</span><span class="p">)</span>
+
+            <span class="bp">self</span><span class="o">.</span><span class="n">remaining_duration</span> <span class="o">-=</span> <span class="mi">1</span>
+            <span class="n">logging</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="sa">f</span><span class="s2">"</span><span class="si">{</span><span class="n">world</span><span class="o">.</span><span class="n">get_name</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">entity</span><span class="p">)</span><span class="si">}</span><span class="s2"> will trigger in </span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">remaining_duration</span><span class="si">}</span><span class="s2"> rounds."</span><span class="p">)</span>
+
             <span class="k">return</span>
 
         <span class="c1"># apply skill, rather than using it, as the instance already exists and we are just using the effects</span>
