--- a/genindex.html
+++ b/genindex.html
@@ -877,7 +877,11 @@
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.ReactionTrigger.CAUSED_AFFLICTION">CAUSED_AFFLICTION (ReactionTrigger attribute)</a>
 </li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.Direction.CENTRE">CENTRE (Direction attribute)</a>
+
+      <ul>
+        <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.InputIntent.CENTRE">(InputIntent attribute)</a>
 </li>
+      </ul></li>
       <li><a href="scripts.engine.core.html#scripts.engine.core.dungen.RoomConcept.centre_x">centre_x() (RoomConcept property)</a>
 </li>
       <li><a href="scripts.engine.core.html#scripts.engine.core.dungen.RoomConcept.centre_y">centre_y() (RoomConcept property)</a>
@@ -891,6 +895,8 @@
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.UIElement.CHARACTER_SELECTOR">CHARACTER_SELECTOR (UIElement attribute)</a>
 </li>
       <li><a href="nqp/elements/character_selector.html#scripts.nqp.ui_elements.character_selector.CharacterSelector">CharacterSelector (class in scripts.nqp.ui_elements.character_selector)</a>, <a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.character_selector.CharacterSelector">[1]</a>
+</li>
+      <li><a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.camera.Camera.check_valid_line_of_sight">check_valid_line_of_sight() (Camera method)</a>
 </li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.DamageType.CHEMICAL">CHEMICAL (DamageType attribute)</a>
 </li>
@@ -908,10 +914,10 @@
       </ul></li>
       <li><a href="engine/world_objects/lighting.html#scripts.engine.world_objects.lighting.LightBox.clear_walls">clear_walls() (LightBox method)</a>, <a href="scripts.engine.world_objects.html#scripts.engine.world_objects.lighting.LightBox.clear_walls">[1]</a>
 </li>
-      <li><a href="engine/world_objects/lighting.html#scripts.engine.world_objects.lighting.Wall.clone_move">clone_move() (Wall method)</a>, <a href="scripts.engine.world_objects.html#scripts.engine.world_objects.lighting.Wall.clone_move">[1]</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="engine/world_objects/lighting.html#scripts.engine.world_objects.lighting.Wall.clone_move">clone_move() (Wall method)</a>, <a href="scripts.engine.world_objects.html#scripts.engine.world_objects.lighting.Wall.clone_move">[1]</a>
+</li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.PrimaryStat.CLOUT">CLOUT (PrimaryStat attribute)</a>
 </li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.TraitData.clout">clout (TraitData attribute)</a>
@@ -1162,8 +1168,6 @@
         <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.ProjectileData.direction">(ProjectileData attribute)</a>
 </li>
       </ul></li>
-      <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.TargetingMethod.DIRECTION">DIRECTION (TargetingMethod attribute)</a>
-</li>
       <li><a href="engine/internal/debug.html#scripts.engine.internal.debug.disable_profiling">disable_profiling() (in module scripts.engine.internal.debug)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.debug.disable_profiling">[1]</a>
 </li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.Direction.DOWN">DOWN (Direction attribute)</a>
@@ -1395,6 +1399,8 @@
       <li><a href="engine/core/world.html#scripts.engine.core.world.get_a_star_path">get_a_star_path() (in module scripts.engine.core.world)</a>, <a href="scripts.engine.core.html#scripts.engine.core.world.get_a_star_path">[1]</a>
 </li>
       <li><a href="engine/core/state.html#scripts.engine.core.state.get_active_skill">get_active_skill() (in module scripts.engine.core.state)</a>, <a href="scripts.engine.core.html#scripts.engine.core.state.get_active_skill">[1]</a>
+</li>
+      <li><a href="engine/core/state.html#scripts.engine.core.state.get_active_skill_target">get_active_skill_target() (in module scripts.engine.core.state)</a>, <a href="scripts.engine.core.html#scripts.engine.core.state.get_active_skill_target">[1]</a>
 </li>
       <li><a href="engine/core/dungen.html#scripts.engine.core.dungen.DungeonGenerator.get_actor_data">get_actor_data() (DungeonGenerator method)</a>, <a href="scripts.engine.core.html#scripts.engine.core.dungen.DungeonGenerator.get_actor_data">[1]</a>
 </li>
@@ -1737,6 +1743,8 @@
       <li><a href="nqp/actions/skill.html#scripts.nqp.actions.skill.Lightning">Lightning (class in scripts.nqp.actions.skill)</a>, <a href="scripts.nqp.actions.html#scripts.nqp.actions.skill.Lightning">[1]</a>
 </li>
       <li><a href="scripts.engine.core.html#scripts.engine.core.component.LightSource">LightSource (class in scripts.engine.core.component)</a>
+</li>
+      <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.TargetingMethod.LINE_OF_SIGHT">LINE_OF_SIGHT (TargetingMethod attribute)</a>
 </li>
       <li><a href="engine/world_objects/lighting.html#scripts.engine.world_objects.lighting.line_str">line_str() (in module scripts.engine.world_objects.lighting)</a>, <a href="scripts.engine.world_objects.html#scripts.engine.world_objects.lighting.line_str">[1]</a>
 </li>
@@ -2121,6 +2129,8 @@
 </li>
       <li><a href="engine/core/system.html#scripts.engine.core.system.process_activations">process_activations() (in module scripts.engine.core.system)</a>, <a href="scripts.engine.core.html#scripts.engine.core.system.process_activations">[1]</a>
 </li>
+      <li><a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.camera.Camera.process_click">process_click() (Camera method)</a>
+</li>
       <li><a href="nqp/elements/actor_info.html#scripts.nqp.ui_elements.actor_info.ActorInfo.process_close_button">process_close_button() (ActorInfo method)</a>, <a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.actor_info.ActorInfo.process_close_button">[1]</a>
 
       <ul>
@@ -2151,12 +2161,8 @@
 </li>
       <li><a href="nqp/processors/input.html#scripts.nqp.processors.input.process_input_event">process_input_event() (in module scripts.nqp.processors.input)</a>, <a href="scripts.nqp.processors.html#scripts.nqp.processors.input.process_input_event">[1]</a>
 </li>
-      <li><a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.camera.Camera.process_intent">process_intent() (Camera method)</a>
-
-      <ul>
-        <li><a href="nqp/processors/intent.html#scripts.nqp.processors.intent.process_intent">(in module scripts.nqp.processors.intent)</a>, <a href="scripts.nqp.processors.html#scripts.nqp.processors.intent.process_intent">[1]</a>
+      <li><a href="nqp/processors/intent.html#scripts.nqp.processors.intent.process_intent">process_intent() (in module scripts.nqp.processors.intent)</a>, <a href="scripts.nqp.processors.html#scripts.nqp.processors.intent.process_intent">[1]</a>
 </li>
-      </ul></li>
       <li><a href="engine/core/system.html#scripts.engine.core.system.process_light_map">process_light_map() (in module scripts.engine.core.system)</a>, <a href="scripts.engine.core.html#scripts.engine.core.system.process_light_map">[1]</a>
 </li>
       <li><a href="engine/core/system.html#scripts.engine.core.system.process_tile_visibility">process_tile_visibility() (in module scripts.engine.core.system)</a>, <a href="scripts.engine.core.html#scripts.engine.core.system.process_tile_visibility">[1]</a>
@@ -2817,6 +2823,8 @@
       <li><a href="scripts.engine.core.html#scripts.engine.core.component.Position.set">set() (Position method)</a>
 </li>
       <li><a href="engine/core/state.html#scripts.engine.core.state.set_active_skill">set_active_skill() (in module scripts.engine.core.state)</a>, <a href="scripts.engine.core.html#scripts.engine.core.state.set_active_skill">[1]</a>
+</li>
+      <li><a href="engine/core/state.html#scripts.engine.core.state.set_active_skill_target">set_active_skill_target() (in module scripts.engine.core.state)</a>, <a href="scripts.engine.core.html#scripts.engine.core.state.set_active_skill_target">[1]</a>
 </li>
       <li><a href="engine/world_objects/lighting.html#scripts.engine.world_objects.lighting.Light.set_alpha">set_alpha() (Light method)</a>, <a href="scripts.engine.world_objects.html#scripts.engine.world_objects.lighting.Light.set_alpha">[1]</a>
 </li>
