--- a/_modules/scripts/nqp/processors/intent.html
+++ b/_modules/scripts/nqp/processors/intent.html
@@ -406,7 +406,7 @@
                     <span class="k">if</span> <span class="n">skill</span><span class="o">.</span><span class="n">targeting_method</span> <span class="o">==</span> <span class="n">TargetingMethod</span><span class="o">.</span><span class="n">AUTO</span><span class="p">:</span>
                         <span class="c1"># pass centre as it doesnt matter, the skill will pick the right direction</span>
                         <span class="n">_process_skill_use</span><span class="p">(</span><span class="n">player</span><span class="p">,</span> <span class="n">skill</span><span class="p">,</span> <span class="n">current_tile</span><span class="p">,</span> <span class="n">Direction</span><span class="o">.</span><span class="n">CENTRE</span><span class="p">)</span>
-                    <span class="k">elif</span> <span class="n">skill</span><span class="o">.</span><span class="n">targeting_method</span> <span class="o">==</span> <span class="n">TargetingMethod</span><span class="o">.</span><span class="n">TILE</span><span class="p">:</span>
+                    <span class="k">elif</span> <span class="n">skill</span><span class="o">.</span><span class="n">targeting_method</span> <span class="ow">in</span> <span class="p">[</span><span class="n">TargetingMethod</span><span class="o">.</span><span class="n">TILE</span><span class="p">,</span> <span class="n">TargetingMethod</span><span class="o">.</span><span class="n">LINE_OF_SIGHT</span><span class="p">]:</span>
                         <span class="c1"># trigger targeting overlay</span>
                         <span class="n">state</span><span class="o">.</span><span class="n">set_new</span><span class="p">(</span><span class="n">GameState</span><span class="o">.</span><span class="n">TARGETING</span><span class="p">)</span>
                         <span class="n">state</span><span class="o">.</span><span class="n">set_active_skill</span><span class="p">(</span><span class="n">skill_name</span><span class="p">)</span>
@@ -421,7 +421,7 @@
         <span class="n">command</span><span class="o">.</span><span class="n">exit_game</span><span class="p">()</span>
 
     <span class="k">elif</span> <span class="n">intent</span> <span class="o">==</span> <span class="n">InputIntent</span><span class="o">.</span><span class="n">LEFT_CLICKED</span><span class="p">:</span>
-        <span class="n">camera</span><span class="o">.</span><span class="n">process_intent</span><span class="p">(</span><span class="n">intent</span><span class="p">)</span></div>
+        <span class="n">camera</span><span class="o">.</span><span class="n">process_click</span><span class="p">()</span></div>
 
 
 <div class="viewcode-block" id="_process_targeting_mode_intents"><a class="viewcode-back" href="../../../../nqp/processors/intent.html#scripts.nqp.processors.intent._process_targeting_mode_intents">[docs]</a><span class="k">def</span> <span class="nf">_process_targeting_mode_intents</span><span class="p">(</span><span class="n">intent</span><span class="p">):</span>
@@ -448,7 +448,7 @@
         <span class="n">state</span><span class="o">.</span><span class="n">set_new</span><span class="p">(</span><span class="n">state</span><span class="o">.</span><span class="n">get_previous</span><span class="p">())</span>
 
     <span class="k">elif</span> <span class="n">intent</span> <span class="o">==</span> <span class="n">InputIntent</span><span class="o">.</span><span class="n">LEFT_CLICKED</span><span class="p">:</span>
-        <span class="n">camera</span><span class="o">.</span><span class="n">process_intent</span><span class="p">(</span><span class="n">intent</span><span class="p">)</span>
+        <span class="n">camera</span><span class="o">.</span><span class="n">process_click</span><span class="p">()</span>
 
     <span class="c1">## Select new skill</span>
     <span class="k">elif</span> <span class="n">intent</span> <span class="ow">in</span> <span class="n">possible_skill_intents</span><span class="p">:</span>
@@ -468,6 +468,11 @@
         <span class="k">if</span> <span class="n">position</span> <span class="ow">and</span> <span class="n">skill</span> <span class="ow">and</span> <span class="n">direction</span><span class="p">:</span>
             <span class="n">outermost</span> <span class="o">=</span> <span class="n">position</span><span class="o">.</span><span class="n">get_outermost</span><span class="p">(</span><span class="n">direction</span><span class="p">)</span>
             <span class="n">tile</span> <span class="o">=</span> <span class="n">world</span><span class="o">.</span><span class="n">get_tile</span><span class="p">((</span><span class="n">outermost</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="o">+</span> <span class="n">direction</span><span class="p">[</span><span class="mi">0</span><span class="p">],</span> <span class="n">outermost</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span> <span class="o">+</span> <span class="n">direction</span><span class="p">[</span><span class="mi">1</span><span class="p">]))</span>
+            <span class="k">if</span> <span class="n">skill</span><span class="o">.</span><span class="n">targeting_method</span> <span class="o">==</span> <span class="n">TargetingMethod</span><span class="o">.</span><span class="n">LINE_OF_SIGHT</span><span class="p">:</span>
+                <span class="k">if</span> <span class="n">state</span><span class="o">.</span><span class="n">get_active_skill_target</span><span class="p">()</span> <span class="o">==</span> <span class="kc">None</span><span class="p">:</span>
+                    <span class="n">tile</span> <span class="o">=</span> <span class="kc">None</span>
+                <span class="k">else</span><span class="p">:</span>
+                    <span class="n">tile</span> <span class="o">=</span> <span class="n">world</span><span class="o">.</span><span class="n">get_tile</span><span class="p">(</span><span class="n">state</span><span class="o">.</span><span class="n">get_active_skill_target</span><span class="p">())</span>
             <span class="k">if</span> <span class="n">tile</span><span class="p">:</span>
                 <span class="c1"># we already checked if we could use the skill before activating the targeting mode</span>
                 <span class="n">_process_skill_use</span><span class="p">(</span><span class="n">player</span><span class="p">,</span> <span class="n">skill</span><span class="p">,</span> <span class="n">tile</span><span class="p">,</span> <span class="n">direction</span><span class="p">)</span>
