deploy: 967185fb2e97382c38ddbc228e767135107d4be8

--- a/_modules/scripts/engine/core/state.html
+++ b/_modules/scripts/engine/core/state.html
@@ -304,7 +304,7 @@
 <span class="sd">    """</span>
     <span class="k">return</span> <span class="n">store</span><span class="o">.</span><span class="n">active_skill</span></div>
 
-<div class="viewcode-block" id="get_active_skill_target"><a class="viewcode-back" href="../../../../scripts.engine.core.html#scripts.engine.core.state.get_active_skill_target">[docs]</a><span class="k">def</span> <span class="nf">get_active_skill_target</span><span class="p">()</span> <span class="o">-&gt;</span> <span class="n">Tuple</span><span class="p">[</span><span class="nb">int</span><span class="p">,</span> <span class="nb">int</span><span class="p">]:</span>
+<div class="viewcode-block" id="get_active_skill_target"><a class="viewcode-back" href="../../../../scripts.engine.core.html#scripts.engine.core.state.get_active_skill_target">[docs]</a><span class="k">def</span> <span class="nf">get_active_skill_target</span><span class="p">():</span>
     <span class="sd">"""</span>
 <span class="sd">    Get the active skill target. Used for targeting mode.</span>
 <span class="sd">    """</span>
@@ -368,7 +368,7 @@
 <span class="sd">    """</span>
     <span class="n">store</span><span class="o">.</span><span class="n">active_skill</span> <span class="o">=</span> <span class="n">skill_name</span></div>
 
-<div class="viewcode-block" id="set_active_skill_target"><a class="viewcode-back" href="../../../../scripts.engine.core.html#scripts.engine.core.state.set_active_skill_target">[docs]</a><span class="k">def</span> <span class="nf">set_active_skill_target</span><span class="p">(</span><span class="n">skill_target</span><span class="p">:</span> <span class="n">Tuple</span><span class="p">[</span><span class="nb">int</span><span class="p">,</span> <span class="nb">int</span><span class="p">]):</span>
+<div class="viewcode-block" id="set_active_skill_target"><a class="viewcode-back" href="../../../../scripts.engine.core.html#scripts.engine.core.state.set_active_skill_target">[docs]</a><span class="k">def</span> <span class="nf">set_active_skill_target</span><span class="p">(</span><span class="n">skill_target</span><span class="p">):</span>
     <span class="sd">"""</span>
 <span class="sd">    Set the active skill target. Used for targeting mode.</span>
 <span class="sd">    """</span>
