--- a/_modules/scripts/engine/internal/constant.html
+++ b/_modules/scripts/engine/internal/constant.html
@@ -266,7 +266,7 @@
 
 <span class="c1">######################## TOP LEVEL CONSTANTS ######################################</span>
 
-<span class="n">VERSION</span> <span class="o">=</span> <span class="s2">"0.145.0"</span>  <span class="c1"># DONT FORGET TO UPDATE SPHINX VERSION</span>
+<span class="n">VERSION</span> <span class="o">=</span> <span class="s2">"0.146.2"</span>  <span class="c1"># DONT FORGET TO UPDATE SPHINX VERSION</span>
 <span class="n">DEBUG_START</span> <span class="o">=</span> <span class="kc">False</span>  <span class="c1"># Whether to start directly in debug map</span>
 
 <span class="n">MAX_SKILLS</span> <span class="o">=</span> <span class="mi">6</span>
@@ -603,7 +603,7 @@
 <span class="sd">    """</span>
 
     <span class="n">AUTO</span> <span class="o">=</span> <span class="n">TargetingMethodType</span><span class="p">(</span><span class="s2">"auto"</span><span class="p">)</span>
-    <span class="n">TILE</span> <span class="o">=</span> <span class="n">TargetingMethodType</span><span class="p">(</span><span class="s2">"tile"</span><span class="p">)</span> <span class="c1"># should be called TILE</span>
+    <span class="n">TILE</span> <span class="o">=</span> <span class="n">TargetingMethodType</span><span class="p">(</span><span class="s2">"tile"</span><span class="p">)</span>
     <span class="n">LINE_OF_SIGHT</span> <span class="o">=</span> <span class="n">TargetingMethodType</span><span class="p">(</span><span class="s2">"line"</span><span class="p">)</span></div>
 
 
