--- a/_modules/scripts/engine/internal/definition.html
+++ b/_modules/scripts/engine/internal/definition.html
@@ -723,9 +723,9 @@
     <span class="n">mod_amount</span><span class="p">:</span> <span class="nb">float</span> <span class="o">=</span> <span class="mf">0.0</span></div>
 
 
-<div class="viewcode-block" id="MoveActorEffectData"><a class="viewcode-back" href="../../../../scripts.engine.internal.html#scripts.engine.internal.definition.MoveActorEffectData">[docs]</a><span class="nd">@register_dataclass_with_json</span>
+<div class="viewcode-block" id="MoveEffectData"><a class="viewcode-back" href="../../../../scripts.engine.internal.html#scripts.engine.internal.definition.MoveEffectData">[docs]</a><span class="nd">@register_dataclass_with_json</span>
 <span class="nd">@dataclass</span><span class="p">()</span>
-<span class="k">class</span> <span class="nc">MoveActorEffectData</span><span class="p">(</span><span class="n">EffectData</span><span class="p">):</span>
+<span class="k">class</span> <span class="nc">MoveEffectData</span><span class="p">(</span><span class="n">EffectData</span><span class="p">):</span>
     <span class="sd">"""</span>
 <span class="sd">    The data for a apply affliction effect.</span>
 <span class="sd">    Also used to hold and map data from json.</span>
