--- a/_modules/scripts/engine/core/world.html
+++ b/_modules/scripts/engine/core/world.html
@@ -295,7 +295,8 @@
     <span class="n">ApplyAfflictionEffect</span><span class="p">,</span>
     <span class="n">DamageEffect</span><span class="p">,</span>
     <span class="n">Effect</span><span class="p">,</span>
-    <span class="n">MoveActorEffect</span><span class="p">,</span>
+    <span class="n">MoveOtherEffect</span><span class="p">,</span>
+    <span class="n">MoveSelfEffect</span><span class="p">,</span>
 <span class="p">)</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.core.utility</span> <span class="kn">import</span> <span class="n">build_sprites_from_paths</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.internal</span> <span class="kn">import</span> <span class="n">library</span>
@@ -330,7 +331,7 @@
     <span class="n">DelayedSkillData</span><span class="p">,</span>
     <span class="n">EffectData</span><span class="p">,</span>
     <span class="n">GodData</span><span class="p">,</span>
-    <span class="n">MoveActorEffectData</span><span class="p">,</span>
+    <span class="n">MoveEffectData</span><span class="p">,</span>
     <span class="n">ProjectileData</span><span class="p">,</span>
     <span class="n">TerrainData</span><span class="p">,</span>
 <span class="p">)</span>
@@ -707,8 +708,8 @@
         <span class="k">return</span> <span class="n">_create_damage_effect</span><span class="p">(</span><span class="n">origin</span><span class="p">,</span> <span class="n">target</span><span class="p">,</span> <span class="n">data</span><span class="p">)</span>
 
     <span class="k">elif</span> <span class="n">effect_type</span> <span class="o">==</span> <span class="n">EffectType</span><span class="o">.</span><span class="n">MOVE</span><span class="p">:</span>
-        <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">data</span><span class="p">,</span> <span class="n">MoveActorEffectData</span><span class="p">)</span>
-        <span class="k">return</span> <span class="n">_create_move_actor_effect</span><span class="p">(</span><span class="n">origin</span><span class="p">,</span> <span class="n">target</span><span class="p">,</span> <span class="n">data</span><span class="p">)</span>
+        <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">data</span><span class="p">,</span> <span class="n">MoveEffectData</span><span class="p">)</span>
+        <span class="k">return</span> <span class="n">_create_move_self_effect</span><span class="p">(</span><span class="n">origin</span><span class="p">,</span> <span class="n">target</span><span class="p">,</span> <span class="n">data</span><span class="p">)</span>
 
     <span class="k">elif</span> <span class="n">effect_type</span> <span class="o">==</span> <span class="n">EffectType</span><span class="o">.</span><span class="n">AFFECT_STAT</span><span class="p">:</span>
         <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">data</span><span class="p">,</span> <span class="n">AffectStatEffectData</span><span class="p">)</span>
@@ -758,8 +759,21 @@
     <span class="k">return</span> <span class="n">effect</span>
 
 
-<span class="k">def</span> <span class="nf">_create_move_actor_effect</span><span class="p">(</span><span class="n">origin</span><span class="p">:</span> <span class="n">EntityID</span><span class="p">,</span> <span class="n">target</span><span class="p">:</span> <span class="n">EntityID</span><span class="p">,</span> <span class="n">data</span><span class="p">:</span> <span class="n">MoveActorEffectData</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">MoveActorEffect</span><span class="p">:</span>
-    <span class="n">effect</span> <span class="o">=</span> <span class="n">MoveActorEffect</span><span class="p">(</span>
+<span class="k">def</span> <span class="nf">_create_move_self_effect</span><span class="p">(</span><span class="n">origin</span><span class="p">:</span> <span class="n">EntityID</span><span class="p">,</span> <span class="n">target</span><span class="p">:</span> <span class="n">EntityID</span><span class="p">,</span> <span class="n">data</span><span class="p">:</span> <span class="n">MoveEffectData</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">MoveSelfEffect</span><span class="p">:</span>
+    <span class="n">effect</span> <span class="o">=</span> <span class="n">MoveSelfEffect</span><span class="p">(</span>
+        <span class="n">origin</span><span class="o">=</span><span class="n">origin</span><span class="p">,</span>
+        <span class="n">target</span><span class="o">=</span><span class="n">target</span><span class="p">,</span>
+        <span class="n">direction</span><span class="o">=</span><span class="n">data</span><span class="o">.</span><span class="n">direction</span><span class="p">,</span>
+        <span class="n">success_effects</span><span class="o">=</span><span class="n">data</span><span class="o">.</span><span class="n">success_effects</span><span class="p">,</span>
+        <span class="n">failure_effects</span><span class="o">=</span><span class="n">data</span><span class="o">.</span><span class="n">failure_effects</span><span class="p">,</span>
+        <span class="n">move_amount</span><span class="o">=</span><span class="n">data</span><span class="o">.</span><span class="n">move_amount</span><span class="p">,</span>
+    <span class="p">)</span>
+
+    <span class="k">return</span> <span class="n">effect</span>
+
+
+<span class="k">def</span> <span class="nf">_create_move_other_effect</span><span class="p">(</span><span class="n">origin</span><span class="p">:</span> <span class="n">EntityID</span><span class="p">,</span> <span class="n">target</span><span class="p">:</span> <span class="n">EntityID</span><span class="p">,</span> <span class="n">data</span><span class="p">:</span> <span class="n">MoveEffectData</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">MoveOtherEffect</span><span class="p">:</span>
+    <span class="n">effect</span> <span class="o">=</span> <span class="n">MoveOtherEffect</span><span class="p">(</span>
         <span class="n">origin</span><span class="o">=</span><span class="n">origin</span><span class="p">,</span>
         <span class="n">target</span><span class="o">=</span><span class="n">target</span><span class="p">,</span>
         <span class="n">direction</span><span class="o">=</span><span class="n">data</span><span class="o">.</span><span class="n">direction</span><span class="p">,</span>
@@ -1487,6 +1501,45 @@
     <span class="n">logging</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="sa">f</span><span class="s2">"'</span><span class="si">{</span><span class="n">get_name</span><span class="p">(</span><span class="n">entity</span><span class="p">)</span><span class="si">}</span><span class="s2">' is now immune to </span><span class="si">{</span><span class="n">immunity_name</span><span class="si">}</span><span class="s2"> for </span><span class="si">{</span><span class="n">duration</span><span class="si">}</span><span class="s2"> rounds."</span><span class="p">)</span></div>
 
 
+<div class="viewcode-block" id="direction_is_blocked"><a class="viewcode-back" href="../../../../scripts.engine.core.html#scripts.engine.core.world.direction_is_blocked">[docs]</a><span class="k">def</span> <span class="nf">direction_is_blocked</span><span class="p">(</span><span class="n">entity</span><span class="p">:</span> <span class="n">EntityID</span><span class="p">,</span> <span class="n">dir_x</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">dir_y</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">bool</span><span class="p">:</span>
+    <span class="sd">"""</span>
+<span class="sd">    Checks if the entity will collide with something when trying to move in the provided direction. Returns True</span>
+<span class="sd">    if blocked.</span>
+<span class="sd">    """</span>
+    <span class="n">collides</span> <span class="o">=</span> <span class="kc">False</span>
+    <span class="n">direction_name</span> <span class="o">=</span> <span class="n">utility</span><span class="o">.</span><span class="n">value_to_member</span><span class="p">((</span><span class="n">dir_x</span><span class="p">,</span> <span class="n">dir_y</span><span class="p">),</span> <span class="n">Direction</span><span class="p">)</span>
+    <span class="n">position</span> <span class="o">=</span> <span class="n">get_entitys_component</span><span class="p">(</span><span class="n">entity</span><span class="p">,</span> <span class="n">Position</span><span class="p">)</span>
+
+    <span class="k">for</span> <span class="n">coordinate</span> <span class="ow">in</span> <span class="n">position</span><span class="o">.</span><span class="n">coordinates</span><span class="p">:</span>
+        <span class="n">target_x</span> <span class="o">=</span> <span class="n">coordinate</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="o">+</span> <span class="n">dir_x</span>
+        <span class="n">target_y</span> <span class="o">=</span> <span class="n">coordinate</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span> <span class="o">+</span> <span class="n">dir_y</span>
+        <span class="n">target_tile</span> <span class="o">=</span> <span class="n">get_tile</span><span class="p">((</span><span class="n">target_x</span><span class="p">,</span> <span class="n">target_y</span><span class="p">))</span>
+
+        <span class="c1"># check a tile was returned</span>
+        <span class="n">is_tile_blocking_movement</span> <span class="o">=</span> <span class="kc">False</span>
+        <span class="k">if</span> <span class="n">target_tile</span><span class="p">:</span>
+            <span class="n">is_tile_blocking_movement</span> <span class="o">=</span> <span class="n">tile_has_tag</span><span class="p">(</span><span class="n">entity</span><span class="p">,</span> <span class="n">target_tile</span><span class="p">,</span> <span class="n">TileTag</span><span class="o">.</span><span class="n">BLOCKED_MOVEMENT</span><span class="p">)</span>
+
+        <span class="c1"># check if tile is blocked</span>
+        <span class="k">if</span> <span class="n">is_tile_blocking_movement</span><span class="p">:</span>
+            <span class="c1"># find out who is blocking</span>
+            <span class="k">for</span> <span class="n">other_entity</span><span class="p">,</span> <span class="p">(</span><span class="n">pos</span><span class="p">,</span> <span class="n">physicality</span><span class="p">)</span> <span class="ow">in</span> <span class="n">query</span><span class="o">.</span><span class="n">position_and_physicality</span><span class="p">:</span>
+                <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">pos</span><span class="p">,</span> <span class="n">Position</span><span class="p">)</span>
+                <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">physicality</span><span class="p">,</span> <span class="n">Physicality</span><span class="p">)</span>
+                <span class="k">if</span> <span class="n">other_entity</span> <span class="o">!=</span> <span class="n">entity</span> <span class="ow">and</span> <span class="n">physicality</span><span class="o">.</span><span class="n">blocks_movement</span> <span class="ow">and</span> <span class="p">(</span><span class="n">target_x</span><span class="p">,</span> <span class="n">target_y</span><span class="p">)</span> <span class="ow">in</span> <span class="n">pos</span><span class="o">.</span><span class="n">coordinates</span><span class="p">:</span>
+                    <span class="c1"># blocked by entity</span>
+                    <span class="n">blockers_name</span> <span class="o">=</span> <span class="n">get_name</span><span class="p">(</span><span class="n">other_entity</span><span class="p">)</span>
+                    <span class="n">name</span> <span class="o">=</span> <span class="n">get_name</span><span class="p">(</span><span class="n">entity</span><span class="p">)</span>
+                    <span class="n">logging</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span>
+                        <span class="sa">f</span><span class="s2">"'</span><span class="si">{</span><span class="n">name</span><span class="si">}</span><span class="s2">' tried to move </span><span class="si">{</span><span class="n">direction_name</span><span class="si">}</span><span class="s2"> to (</span><span class="si">{</span><span class="n">target_x</span><span class="si">}</span><span class="s2">,</span><span class="si">{</span><span class="n">target_y</span><span class="si">}</span><span class="s2">) but was blocked"</span>
+                        <span class="sa">f</span><span class="s2">" by '</span><span class="si">{</span><span class="n">blockers_name</span><span class="si">}</span><span class="s2">'. "</span>
+                    <span class="p">)</span>
+                    <span class="k">break</span>
+            <span class="n">collides</span> <span class="o">=</span> <span class="kc">True</span>
+
+    <span class="k">return</span> <span class="n">collides</span></div>
+
+
 <span class="c1">################################ CONDITIONAL ACTIONS - CHANGE STATE - RETURN SUCCESS STATE  #############</span>
 
 
@@ -1781,11 +1834,12 @@
 
     <span class="c1"># apply to hit modifier to damage</span>
     <span class="k">if</span> <span class="n">hit_type</span> <span class="o">==</span> <span class="n">HitType</span><span class="o">.</span><span class="n">CRIT</span><span class="p">:</span>
-        <span class="n">modified_damage</span> <span class="o">=</span> <span class="n">mitigated_damage</span> <span class="o">*</span> <span class="n">hit_types_data</span><span class="o">.</span><span class="n">crit</span><span class="o">.</span><span class="n">modifier</span>
+        <span class="n">hit_mod</span> <span class="o">=</span> <span class="n">hit_types_data</span><span class="o">.</span><span class="n">crit</span><span class="o">.</span><span class="n">modifier</span>
     <span class="k">elif</span> <span class="n">hit_type</span> <span class="o">==</span> <span class="n">HitType</span><span class="o">.</span><span class="n">HIT</span><span class="p">:</span>
-        <span class="n">modified_damage</span> <span class="o">=</span> <span class="n">mitigated_damage</span> <span class="o">*</span> <span class="n">hit_types_data</span><span class="o">.</span><span class="n">hit</span><span class="o">.</span><span class="n">modifier</span>
+        <span class="n">hit_mod</span> <span class="o">=</span> <span class="n">hit_types_data</span><span class="o">.</span><span class="n">hit</span><span class="o">.</span><span class="n">modifier</span>
     <span class="k">else</span><span class="p">:</span>
-        <span class="n">modified_damage</span> <span class="o">=</span> <span class="n">mitigated_damage</span> <span class="o">*</span> <span class="n">hit_types_data</span><span class="o">.</span><span class="n">graze</span><span class="o">.</span><span class="n">modifier</span>
+        <span class="n">hit_mod</span> <span class="o">=</span> <span class="n">hit_types_data</span><span class="o">.</span><span class="n">graze</span><span class="o">.</span><span class="n">modifier</span>
+    <span class="n">modified_damage</span> <span class="o">=</span> <span class="n">mitigated_damage</span> <span class="o">*</span> <span class="n">hit_mod</span>
 
     <span class="c1"># round down the dmg</span>
     <span class="n">int_modified_damage</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="n">modified_damage</span><span class="p">)</span>
@@ -1797,8 +1851,10 @@
 
     <span class="c1"># log the info</span>
     <span class="n">logging</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span>
-        <span class="sa">f</span><span class="s2">"-&gt; Initial:</span><span class="si">{</span><span class="n">base_damage</span><span class="si">}</span><span class="s2"> + </span><span class="si">{</span><span class="n">damage_mod_amount</span><span class="si">}</span><span class="s2">, Mitigated: </span><span class="si">{</span><span class="nb">format</span><span class="p">(</span><span class="n">mitigated_damage</span><span class="p">,</span> <span class="s1">'.2f'</span><span class="p">)</span><span class="si">}</span><span class="s2">,  Modified by"</span>
-        <span class="sa">f</span><span class="s2">"Hit Type:</span><span class="si">{</span><span class="nb">format</span><span class="p">(</span><span class="n">modified_damage</span><span class="p">,</span> <span class="s1">'.2f'</span><span class="p">)</span><span class="si">}</span><span class="s2">, Final: </span><span class="si">{</span><span class="n">int_modified_damage</span><span class="si">}</span><span class="s2">"</span>
+        <span class="sa">f</span><span class="s2">"-&gt; Base Damage:</span><span class="si">{</span><span class="n">base_damage</span><span class="si">}</span><span class="s2">, +Damage Mod:</span><span class="si">{</span><span class="n">damage_mod_amount</span><span class="si">}</span><span class="s2"> (</span><span class="si">{</span><span class="n">base_damage</span> <span class="o">+</span> <span class="n">damage_mod_amount</span><span class="si">}</span><span class="s2">), "</span>
+        <span class="sa">f</span><span class="s2">"-Resistance:</span><span class="si">{</span><span class="n">resist_value</span><span class="si">}</span><span class="s2"> (</span><span class="si">{</span><span class="nb">format</span><span class="p">(</span><span class="n">mitigated_damage</span><span class="p">,</span> <span class="s1">'.2f'</span><span class="p">)</span><span class="si">}</span><span class="s2">), "</span>
+        <span class="sa">f</span><span class="s2">"*Hit Mod:</span><span class="si">{</span><span class="n">hit_mod</span><span class="si">}</span><span class="s2"> (</span><span class="si">{</span><span class="nb">format</span><span class="p">(</span><span class="n">modified_damage</span><span class="p">,</span> <span class="s1">'.2f'</span><span class="p">)</span><span class="si">}</span><span class="s2">), "</span>
+        <span class="sa">f</span><span class="s2">"Result (rounded): </span><span class="si">{</span><span class="n">int_modified_damage</span><span class="si">}</span><span class="s2">"</span>
     <span class="p">)</span>
 
     <span class="k">return</span> <span class="n">int_modified_damage</span></div>
