--- a/_modules/scripts/nqp/actions/skill.html
+++ b/_modules/scripts/nqp/actions/skill.html
@@ -261,13 +261,7 @@
 
 <span class="kn">from</span> <span class="nn">scripts.engine.core</span> <span class="kn">import</span> <span class="n">world</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.core.component</span> <span class="kn">import</span> <span class="n">Aesthetic</span><span class="p">,</span> <span class="n">Position</span>
-<span class="kn">from</span> <span class="nn">scripts.engine.core.effect</span> <span class="kn">import</span> <span class="p">(</span>
-    <span class="n">AffectCooldownEffect</span><span class="p">,</span>
-    <span class="n">ApplyAfflictionEffect</span><span class="p">,</span>
-    <span class="n">DamageEffect</span><span class="p">,</span>
-    <span class="n">Effect</span><span class="p">,</span>
-    <span class="n">MoveActorEffect</span><span class="p">,</span>
-<span class="p">)</span>
+<span class="kn">from</span> <span class="nn">scripts.engine.core.effect</span> <span class="kn">import</span> <span class="n">AffectCooldownEffect</span><span class="p">,</span> <span class="n">ApplyAfflictionEffect</span><span class="p">,</span> <span class="n">DamageEffect</span><span class="p">,</span> <span class="n">Effect</span><span class="p">,</span> <span class="n">MoveSelfEffect</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.internal</span> <span class="kn">import</span> <span class="n">library</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.internal.action</span> <span class="kn">import</span> <span class="n">Skill</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.internal.constant</span> <span class="kn">import</span> <span class="n">DamageType</span><span class="p">,</span> <span class="n">DirectionType</span><span class="p">,</span> <span class="n">PrimaryStat</span><span class="p">,</span> <span class="n">Shape</span>
@@ -293,11 +287,11 @@
 
         <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="n">user</span><span class="p">,</span> <span class="n">tile</span><span class="p">,</span> <span class="n">direction</span><span class="p">)</span></div>
 
-<div class="viewcode-block" id="Move._build_effects"><a class="viewcode-back" href="../../../../nqp/actions/skill.html#scripts.nqp.actions.skill.Move._build_effects">[docs]</a>    <span class="k">def</span> <span class="nf">_build_effects</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">entity</span><span class="p">:</span> <span class="n">EntityID</span><span class="p">,</span> <span class="n">potency</span><span class="p">:</span> <span class="nb">float</span> <span class="o">=</span> <span class="mf">1.0</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">List</span><span class="p">[</span><span class="n">MoveActorEffect</span><span class="p">]:</span>  <span class="c1"># type:ignore</span>
+<div class="viewcode-block" id="Move._build_effects"><a class="viewcode-back" href="../../../../nqp/actions/skill.html#scripts.nqp.actions.skill.Move._build_effects">[docs]</a>    <span class="k">def</span> <span class="nf">_build_effects</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">entity</span><span class="p">:</span> <span class="n">EntityID</span><span class="p">,</span> <span class="n">potency</span><span class="p">:</span> <span class="nb">float</span> <span class="o">=</span> <span class="mf">1.0</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">List</span><span class="p">[</span><span class="n">MoveSelfEffect</span><span class="p">]:</span>  <span class="c1"># type:ignore</span>
         <span class="sd">"""</span>
 <span class="sd">        Build the effects of this skill applying to a single entity.</span>
 <span class="sd">        """</span>
-        <span class="n">move_effect</span> <span class="o">=</span> <span class="n">MoveActorEffect</span><span class="p">(</span>
+        <span class="n">move_effect</span> <span class="o">=</span> <span class="n">MoveSelfEffect</span><span class="p">(</span>
             <span class="n">origin</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">user</span><span class="p">,</span>
             <span class="n">target</span><span class="o">=</span><span class="n">entity</span><span class="p">,</span>
             <span class="n">success_effects</span><span class="o">=</span><span class="p">[],</span>
@@ -370,11 +364,11 @@
 
         <span class="k">return</span> <span class="p">[</span><span class="n">move_effect</span><span class="p">]</span></div>
 
-<div class="viewcode-block" id="Lunge._build_move_effect"><a class="viewcode-back" href="../../../../nqp/actions/skill.html#scripts.nqp.actions.skill.Lunge._build_move_effect">[docs]</a>    <span class="k">def</span> <span class="nf">_build_move_effect</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">entity</span><span class="p">:</span> <span class="n">EntityID</span><span class="p">,</span> <span class="n">success_effects</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="n">Effect</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="n">MoveActorEffect</span><span class="p">:</span>
+<div class="viewcode-block" id="Lunge._build_move_effect"><a class="viewcode-back" href="../../../../nqp/actions/skill.html#scripts.nqp.actions.skill.Lunge._build_move_effect">[docs]</a>    <span class="k">def</span> <span class="nf">_build_move_effect</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">entity</span><span class="p">:</span> <span class="n">EntityID</span><span class="p">,</span> <span class="n">success_effects</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="n">Effect</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="n">MoveSelfEffect</span><span class="p">:</span>
         <span class="sd">"""</span>
 <span class="sd">        Return the move effect for the lunge</span>
 <span class="sd">        """</span>
-        <span class="n">move_effect</span> <span class="o">=</span> <span class="n">MoveActorEffect</span><span class="p">(</span>
+        <span class="n">move_effect</span> <span class="o">=</span> <span class="n">MoveSelfEffect</span><span class="p">(</span>
             <span class="n">origin</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">user</span><span class="p">,</span>
             <span class="n">target</span><span class="o">=</span><span class="n">entity</span><span class="p">,</span>
             <span class="n">success_effects</span><span class="o">=</span><span class="n">success_effects</span><span class="p">,</span>
